05-05-2025, fix navbar not visible

--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -9,10 +9,10 @@ html {
 }
 
 .rect {
-    stroke-dashoffset: 5;
+    stroke-dashoffset: 5.5;
     stroke-dasharray: 0 0 10 40 10 40;
     transition: 0.5s;
-    stroke: #fff;
+    stroke: #2563eb;
 }
 
 .knav {
@@ -31,7 +31,7 @@ html {
 .kontainer {
     position: absolute;
     inset: 0;
-    background: rgb(0, 0, 0);
+    background: rgb(224, 224, 224);
     display: flex;
     flex-direction: row;
     justify-content: space-around;
